--- a/gradle/local_publish.gradle
+++ b/gradle/local_publish.gradle
@@ -1,12 +1,12 @@
 project.apply plugin: 'maven-publish'
 
 task javadocJar(type: Jar) {
-//    classifier = 'javadoc'
+    archiveClassifier = 'javadoc'
     from javadoc
 }
 
 task sourcesJar(type: Jar) {
-//    classifier = 'sources'
+    archiveClassifier = 'sources'
     from sourceSets.main.allSource
 }
 
