--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
     ext.kotlin_version = '2.1.10'
     repositories {
@@ -6,43 +8,17 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
-plugins {
-    id 'java'
-//    kotlin("jvm")
-    id 'org.jetbrains.kotlin.jvm' version '2.1.10'
-}
-
-repositories {
-    mavenCentral()
-}
-
-group 'com.brunodles.table_builder'
-ext.artifactId = "table_builder"
-version = "1.0.0"
-
-apply from: "$rootDir/gradle/local_publish.gradle"
-
-dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
-    testImplementation 'org.jetbrains.kotlin:kotlin-test'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.0'
-    testImplementation "io.mockk:mockk:1.12.0"
-}
-
-test {
-    useJUnitPlatform()
-}
-
-kotlin {
-    jvmToolchain(8)
+allprojects {
+    repositories {
+        mavenLocal()
+        google()
+        mavenCentral()
+    }
 }
