--- a/.gitignore
+++ b/.gitignore
@@ -164,7 +164,7 @@ replay_pid*
 ### Gradle ###
 .gradle
 **/build/
-!src/**/build/
+!table_builder/src/**/build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
