--- a/gurl/build.gradle
+++ b/gurl/build.gradle
@@ -28,31 +28,4 @@ test {
     }
 }
 
-jar {
-    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
-    manifest {
-        attributes(
-                'Class-Path':
-                        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) },
-                'Main-Class': mainClassName
-        )
-    }
-
-    from {
-        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-    into ''
-}
-
-task fatJar(type: Jar) {
-    duplicatesStrategy(DuplicatesStrategy.WARN)
-    manifest {
-        attributes 'Main-Class': mainClassName
-    }
-    archiveClassifier = "all"
-    from {
-//        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-    with jar
-}
+apply from: "$rootDir/gradle/jvm_application.gradle"
