--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'org.gradle.toolchains.foojay-resolver-convention' version '0.8.0'
 }
-rootProject.name = 'CLI-Tools'
+rootProject.name = 'CLI_Tools'
 
 include("table_builder")
 include("ginq")
